k8s/06-riju-server/00-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: riju-server
  name: riju-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riju-server
  template:
    metadata:
      labels:
        app: riju-server
    spec:
      imagePullSecrets:
        - name: docker-registry-auth
      containers:
        - name: server
          image: "localhost:30999/app:latest"
          imagePullPolicy: Always
          resources: {}
          readinessProbe:
            httpGet:
              path: /
              port: 6119
              scheme: HTTP
            failureThreshold: 1
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /
              port: 6119
              scheme: HTTP
            failureThreshold: 3
            initialDelaySeconds: 2
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          ports:
            - name: http
              containerPort: 6119
