k8s/06-riju-server/01-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  namespace: riju-server
  name: riju-server
spec:
  selector:
    app: riju-server
  ports:
    - name: http
      port: 80
      targetPort: 6119
